--- a/nginx_rtmp_wizard/templates/rtmp.conf
+++ b/nginx_rtmp_wizard/templates/rtmp.conf
@@ -1,3 +1,4 @@
+{% autoescape off %}
 rtmp {
   {% for server in servers %}
   server {
@@ -17,3 +18,4 @@ rtmp {
   }
   {% endfor %}
 }
+{% endautoescape %}
